--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -17,6 +17,7 @@ list(
 
 add_subdirectory(ascii)
 add_subdirectory(bitsets)
+add_subdirectory(hash_functions)
 add_subdirectory(io)
 add_subdirectory(linalg)
 add_subdirectory(logger)
