--- a/src/tests/hash_functions/validation/Makefile.validation
+++ b/src/tests/hash_functions/validation/Makefile.validation
@@ -1,54 +1,31 @@
-# Makefile for validation tests of hash codes, currently using the GNU
-# GCC compiler collection.
-
-FC = /opt/local/bin/gfortran-mp-11
-CC = /opt/local/bin/gcc-mp-11
-CXX = /opt/local/bin/g++-mp-11
+MOD_PATH = -I../../../
 
 FFLAGS = -O3
 CFLAGS = -O3
 CXXFLAGS = -O3
-LIBDIRS = -L../../../ -L./ -L/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/lib/
-LIBS = -lfortran_stdlib -lc_hash
-MOD_DIRS = -I../../../mod_files -J./mod_files
-INCLUDE_DIRS = -I./ -I/Library/Developer/CommandLineTools/SDKs/MacOSX10.15.sdk/usr/include -I/Library/Developer/CommandLineTools/SDKs/MacOSX10.15.sdk/usr/include/tidy
+LIBDIRS = -L./
+LIBS = -lc_hash
+INCLUDE_DIRS = -I./
 
-all: test_32_bit_hash_validation test_64_bit_hash_validation
+all: generate_hash_arrays generate_key_array hash_validity_test
 
-test_32_bit_hash_validation: test_32_bit_hash_validation.o \
-nmhash_wrapper.o waterhash_wrapper.o ./libc_hash.a
-	$(FC) $(FFLAGS) $(MOD_DIRS) $(LIBDIRS) \
-test_32_bit_hash_validation.o \
-nmhash_wrapper.o \
-waterhash_wrapper.o \
-$(LIBS) \
--o test_32_bit_hash_validation
+generate_key_array: generate_key_array.f90
+	$(FC) $(FFLAGS) generate_key_array.f90 -o generate_key_array
 
-test_32_bit_hash_validation.o: test_32_bit_hash_validation.f90 \
-../../../mod_files/stdlib_64_bit_hash_functions.mod \
-nmhash_wrapper.o waterhash_wrapper.o
-	$(FC) $(FFLAGS) $(MOD_DIRS) -c test_32_bit_hash_validation.f90 \
-	-o test_32_bit_hash_validation.o
+hash_validity_test: hash_validity_test.f90
+	$(FC) $(FFLAGS) -L../../../ -lstdlib $(MOD_PATH) \
+	hash_validity_test.f90 -o hash_validity_test
 
-test_64_bit_hash_validation: test_64_bit_hash_validation.o \
-spookyv2_wrapper.o pengy_wrapper.o ./libc_hash.a
-	$(FC) $(FFLAGS) $(MOD_DIRS) $(LIBDIRS) \
-test_64_bit_hash_validation.o \
-spookyv2_wrapper.o \
-pengy_wrapper.o \
-$(LIBS) \
--o test_64_bit_hash_validation
+generate_hash_arrays: generate_hash_arrays.o ./libc_hash.a
+	$(CXX) $(CXXFLAGS) $(LIBDIRS) generate_hash_arrays.o \
+$(LIBS) -o generate_hash_arrays
 
-test_64_bit_hash_validation.o: test_64_bit_hash_validation.f90 \
-../../../mod_files/stdlib_64_bit_hash_functions.mod \
-spookyv2_wrapper.o \
-pengy_wrapper.o
-	$(FC) $(FFLAGS) $(MOD_DIRS) -c test_64_bit_hash_validation.f90 \
-	-o test_64_bit_hash_validation.o
+generate_hash_arrays.o: generate_hash_arrays.cpp libc_hash.a
+	$(CXX) $(CXXFLAGS) -c generate_hash_arrays.cpp -o generate_hash_arrays.o
 
 libc_hash.a: SpookyV2.o SpookyV2Test.o pengyhash.o nmhash_scalar.o waterhash.o
-	ar rcs libc_hash.a SpookyV2.o SpookyV2Test.o pengyhash.o nmhash_scalar.o \
-	       waterhash.o
+	ar rcs libc_hash.a SpookyV2.o SpookyV2Test.o pengyhash.o \
+               nmhash_scalar.o waterhash.o
 
 pengyhash.o: pengyhash.c pengyhash.h
 	$(CC) $(CFLAGS) $(INCLUDE_DIRS) -c pengyhash.c -o pengyhash.o
@@ -62,23 +39,12 @@ SpookyV2.o: SpookyV2.cpp SpookyV2.h
 SpookyV2Test.o: SpookyV2Test.cpp SpookyV2.h
 	$(CXX) $(CXXFLAGS) $(INCLUDE_DIRS) -c SpookyV2Test.cpp -o SpookyV2Test.o
 
-spookyv2_wrapper.o: spookyv2_wrapper.f90
-	$(FC) $(FFLAGS) $(MOD_DIRS) -c spookyv2_wrapper.f90 \
-	-o spookyv2_wrapper.o
-
-pengy_wrapper.o: pengy_wrapper.f90
-	$(FC) $(FFLAGS) $(MOD_DIRS) -c pengy_wrapper.f90 \
-	-o pengy_wrapper.o
-
 nmhash_scalar.o: nmhash_scalar.c nmhash_scalar.h
 	$(CC) $(CXXFLAGS) $(INCLUDE_DIRS) -c nmhash_scalar.c -o nmhash_scalar.o
 
-nmhash_wrapper.o: nmhash_wrapper.f90
-	$(FC) $(FFLAGS) $(MOD_DIRS) -c nmhash_wrapper.f90 \
-	-o nmhash_wrapper.o
-
-waterhash_wrapper.o: waterhash_wrapper.f90
-	$(FC) $(FFLAGS) $(MOD_DIRS) -c waterhash_wrapper.f90 \
-	-o waterhash_wrapper.o
+clean:
+	rm nmhash_scalar.o SpookyV2Test.o SpookyV2.o waterhash.o pengyhash.o \
+           libc_hash.a generate_hash_arrays.o generate_hash_arrays \
+	   hash_validity_test generate_key_array
 
 
