Change s compile flag
Change a compile flag for gfortran from -fwrapv to -fno-range-check.

[ticket: X]

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ if(CMAKE_Fortran_COMPILER_ID STREQUAL GNU)
   endif()
   add_compile_options(-fimplicit-none)
   add_compile_options(-ffree-line-length-132)
-  add_compile_options(-fwrapv)
+  add_compile_options(-fno-range-check)
   add_compile_options(-Wall)
   add_compile_options(-Wextra)
   add_compile_options(-Wimplicit-procedure)
