--- a/Makefile.manual
+++ b/Makefile.manual
@@ -1,7 +1,7 @@
 # Fortran stdlib Makefile
 
 FC ?= gfortran
-FFLAGS ?= -Wall -Wextra -Wimplicit-interface -fPIC -g -fcheck=all -fwrapv
+FFLAGS ?= -Wall -Wextra -Wimplicit-interface -fPIC -g -fcheck=all -fno-range-check
 FYPPFLAGS ?=
 
 export FC
