Apply the more straightforward suggestions from code review
Co-authored-by: Ivan Pribec <ivan.pribec@gmail.com>

--- a/src/tests/selection/CMakeLists.txt
+++ b/src/tests/selection/CMakeLists.txt
@@ -1,7 +1,8 @@
 ### Pre-process: .fpp -> .f90 via Fypp
 
 # Create a list of the files to be preprocessed
-set(fppFiles
+set(
+  fppFiles
     test_selection.fypp
 )
 
