--- a/Makefile.manual
+++ b/Makefile.manual
@@ -4,6 +4,11 @@ FC ?= gfortran
 FFLAGS ?= -Wall -Wextra -Wimplicit-interface -fPIC -g -fcheck=all
 FYPPFLAGS ?=
 
+FYPPFLAGS += \
+             -DPROJECT_VERSION_MAJOR=$(shell cut -d. -f1 VERSION) \
+             -DPROJECT_VERSION_MINOR=$(shell cut -d. -f2 VERSION) \
+             -DPROJECT_VERSION_PATCH=$(shell cut -d. -f3 VERSION)
+
 export FC
 export FFLAGS
 export FYPPFLAGS
