--- a/Makefile.manual
+++ b/Makefile.manual
@@ -4,10 +4,11 @@ FC ?= gfortran
 FFLAGS ?= -Wall -Wextra -Wimplicit-interface -fPIC -g -fcheck=all
 FYPPFLAGS ?=
 
+VERSION := $(subst ., ,$(file <VERSION))
 FYPPFLAGS += \
-             -DPROJECT_VERSION_MAJOR=$(shell cut -d. -f1 VERSION) \
-             -DPROJECT_VERSION_MINOR=$(shell cut -d. -f2 VERSION) \
-             -DPROJECT_VERSION_PATCH=$(shell cut -d. -f3 VERSION)
+             -DPROJECT_VERSION_MAJOR=$(word 1,$(VERSION)) \
+             -DPROJECT_VERSION_MINOR=$(word 2,$(VERSION)) \
+             -DPROJECT_VERSION_PATCH=$(word 3,$(VERSION))
 
 export FC
 export FFLAGS
