--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -134,7 +134,7 @@ stdlib_stats_mean.o: \
 stdlib_stats_median.o: \
     stdlib_optval.o \
     stdlib_kinds.o \
-    stdlib_sorting.o \
+    stdlib_selection.o \
     stdlib_stats.o
 stdlib_stats_moment.o: \
     stdlib_optval.o \
