--- a/src/tests/hash_functions_test/Makefile.manual
+++ b/src/tests/hash_functions_test/Makefile.manual
@@ -1,24 +1,35 @@
-MOD_PATH = -I../../../
+CC = gcc
+CXX = g++
 
 FFLAGS = -O3
 CFLAGS = -O3
 CXXFLAGS = -O3
-LIBDIRS = -L./
-LIBS = -lc_hash
-INCLUDE_DIRS = -I./
 
-all: generate_hash_arrays generate_key_array hash_validity_test
+CPPFLAGS += -I. -I../.. -I..
+LDFLAGS += -L../.. -L.. -lstdlib-testing -lstdlib
+
+PROGS = generate_key_array generate_hash_arrays hash_validity_test
+TESTPROGS = $(PROGS:=TEST)
+
+all: $(PROGS)
+
+test: $(TESTPROGS)
+
+$(TESTPROGS):
+	./$(@:TEST=)
+
+
 
 generate_key_array: generate_key_array.f90
 	$(FC) $(FFLAGS) generate_key_array.f90 -o generate_key_array
 
 hash_validity_test: hash_validity_test.f90
-	$(FC) $(FFLAGS) -L../../../ -lstdlib $(MOD_PATH) \
-	hash_validity_test.f90 -o hash_validity_test
+	$(FC) $(FFLAGS) $(CPPFLAGS) \
+	hash_validity_test.f90 -o hash_validity_test $(LDFLAGS)
 
-generate_hash_arrays: generate_hash_arrays.o ./libc_hash.a
-	$(CXX) $(CXXFLAGS) $(LIBDIRS) generate_hash_arrays.o \
-$(LIBS) -o generate_hash_arrays
+generate_hash_arrays: generate_hash_arrays.o libc_hash.a
+	$(CXX) $(CXXFLAGS) generate_hash_arrays.o \
+	-o generate_hash_arrays -L. -lc_hash
 
 generate_hash_arrays.o: generate_hash_arrays.cpp libc_hash.a
 	$(CXX) $(CXXFLAGS) -c generate_hash_arrays.cpp -o generate_hash_arrays.o
@@ -28,23 +39,24 @@ libc_hash.a: SpookyV2.o SpookyV2Test.o pengyhash.o nmhash_scalar.o waterhash.o
                nmhash_scalar.o waterhash.o
 
 pengyhash.o: pengyhash.c pengyhash.h
-	$(CC) $(CFLAGS) $(INCLUDE_DIRS) -c pengyhash.c -o pengyhash.o
+	$(CC) $(CFLAGS) $(CPPFLAGS) -c pengyhash.c -o pengyhash.o
 
 waterhash.o: waterhash.c waterhash.h
-	$(CC) $(CFLAGS) $(INCLUDE_DIRS) -c waterhash.c -o waterhash.o
+	$(CC) $(CFLAGS) $(CPPFLAGS) -c waterhash.c -o waterhash.o
 
 SpookyV2.o: SpookyV2.cpp SpookyV2.h
-	$(CXX) $(CXXFLAGS) $(INCLUDE_DIRS) -c SpookyV2.cpp -o SpookyV2.o
+	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c SpookyV2.cpp -o SpookyV2.o
 
 SpookyV2Test.o: SpookyV2Test.cpp SpookyV2.h
-	$(CXX) $(CXXFLAGS) $(INCLUDE_DIRS) -c SpookyV2Test.cpp -o SpookyV2Test.o
+	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c SpookyV2Test.cpp -o SpookyV2Test.o
 
 nmhash_scalar.o: nmhash_scalar.c nmhash_scalar.h
-	$(CC) $(CXXFLAGS) $(INCLUDE_DIRS) -c nmhash_scalar.c -o nmhash_scalar.o
+	$(CC) $(CXXFLAGS) $(CPPFLAGS) -c nmhash_scalar.c -o nmhash_scalar.o
 
 clean:
 	rm nmhash_scalar.o SpookyV2Test.o SpookyV2.o waterhash.o pengyhash.o \
            libc_hash.a generate_hash_arrays.o generate_hash_arrays \
-	   hash_validity_test generate_key_array
+	   hash_validity_test generate_key_array \
+	   *.bin
 
 
