--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -4,6 +4,9 @@ SRCFYPP = \
         stdlib_bitsets_large.fypp \
         stdlib_bitsets.fypp \
         stdlib_io.fypp \
+        stdlib_io_npy.fypp \
+        stdlib_io_npy_load.fypp \
+        stdlib_io_npy_save.fypp \
         stdlib_kinds.fypp \
         stdlib_linalg.fypp \
         stdlib_linalg_diag.fypp \
@@ -89,6 +92,16 @@ stdlib_io.o: \
     stdlib_optval.o \
     stdlib_kinds.o \
     stdlib_ascii.o
+stdlib_io_npy.o: \
+    stdlib_kinds.o
+stdlib_io_npy_load.o: \
+    stdlib_io_npy.o \
+    stdlib_error.o \
+    stdlib_strings.o
+stdlib_io_npy_save.o: \
+    stdlib_io_npy.o \
+    stdlib_error.o \
+    stdlib_strings.o
 stdlib_linalg.o: \
     stdlib_kinds.o
 stdlib_linalg_diag.o: \
