--- a/Makefile.manual
+++ b/Makefile.manual
@@ -2,13 +2,15 @@
 
 FC ?= gfortran
 FFLAGS ?= -Wall -Wextra -Wimplicit-interface -fPIC -g -fcheck=all
-FYPPFLAGS ?=
+ADD_FYPPFLAGS ?=
 
 VERSION := $(subst ., ,$(file < VERSION))
-FYPPFLAGS += \
+VERSION_FYPPFLAGS += \
              -DPROJECT_VERSION_MAJOR=$(word 1,$(VERSION)) \
              -DPROJECT_VERSION_MINOR=$(word 2,$(VERSION)) \
              -DPROJECT_VERSION_PATCH=$(word 3,$(VERSION))
+
+FYPPFLAGS := $(ADD_FYPPFLAGS) $(VERSION_FYPPFLAGS)
 
 export FC
 export FFLAGS
