--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,11 +42,11 @@ if(CMAKE_Fortran_COMPILER_ID STREQUAL GNU)
   add_compile_options(-std=f2018)
 elseif(CMAKE_Fortran_COMPILER_ID MATCHES "^Intel")
   if(WIN32)
-    add_compile_options(/warn:declarations,general,usage,interfaces,unused)
-    add_compile_options(/stand:f18)
+    add_compile_options("$<$<COMPILE_LANGUAGE:Fortran>:/warn:declarations,general,usage,interfaces,unused>")
+    add_compile_options("$<$<COMPILE_LANGUAGE:Fortran>:/stand:f18>")
   else()
-    add_compile_options(-warn declarations,general,usage,interfaces,unused)
-    add_compile_options(-stand f18)
+    add_compile_options("$<$<COMPILE_LANGUAGE:Fortran>:-warn declarations,general,usage,interfaces,unused>")
+    add_compile_options("$<$<COMPILE_LANGUAGE:Fortran>:-stand f18>")
   endif()
 endif()
 
