--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -52,7 +52,7 @@ jobs:
     - name: Install fypp
       run: pip install --upgrade fypp
 
-    - name: Install GFortran Linux
+    - name: Install GCC compilers Linux
       if: contains( matrix.os, 'ubuntu')
       run: |
         sudo add-apt-repository ppa:ubuntu-toolchain-r/test
@@ -63,7 +63,7 @@ jobs:
         --slave /usr/bin/g++ g++ /usr/bin/g++-${GCC_V} \
         --slave /usr/bin/gcov gcov /usr/bin/gcov-${GCC_V}
 
-    - name: Install GFortran macOS
+    - name: Install GCC compilers macOS
       if: contains( matrix.os, 'macos')
       run: |
           brew install gcc@${GCC_V} || brew upgrade gcc@${GCC_V} || true
@@ -161,6 +161,7 @@ jobs:
       if: contains(matrix.os, 'ubuntu')
       run: |
         sudo apt-get install intel-oneapi-compiler-fortran
+        sudo apt-get install intel-oneapi-compiler-c
 
     - name: Install Intel oneAPI compiler (OSX)
       if: contains(matrix.os, 'macos') && steps.cache-install.outputs.cache-hit != 'true'
