--- a/Makefile.manual
+++ b/Makefile.manual
@@ -1,6 +1,9 @@
 # Fortran stdlib Makefile
 
 FC ?= gfortran
+CC ?= gcc
+CXX ?= g++
+
 FFLAGS ?= -Wall -Wextra -Wimplicit-interface -fPIC -g -fcheck=all -fno-range-check
 FYPPFLAGS ?=
 
@@ -11,6 +14,8 @@ FYPPFLAGS += \
              -DPROJECT_VERSION_PATCH=$(word 3,$(VERSION))
 
 export FC
+export CC
+export CXX
 export FFLAGS
 export FYPPFLAGS
 
