--- a/src/tests/stats/CMakeLists.txt
+++ b/src/tests/stats/CMakeLists.txt
@@ -7,6 +7,7 @@ set(fppFiles
     test_median.fypp
     test_distribution_uniform.fypp
     test_distribution_normal.fypp
+    test_distribution_exponential.fypp
 )
 
 fypp_f90("${fyppFlags}" "${fppFiles}" outFiles)
@@ -22,6 +23,7 @@ ADDTEST(varn)
 ADDTEST(random)
 ADDTEST(distribution_uniform)
 ADDTEST(distribution_normal)
+ADDTEST(distribution_exponential)
 
 if(DEFINED CMAKE_MAXIMUM_RANK)
     if(${CMAKE_MAXIMUM_RANK} GREATER 7)
