--- a/src/tests/stats/Makefile.manual
+++ b/src/tests/stats/Makefile.manual
@@ -2,7 +2,8 @@ SRCFYPP = \
         test_mean.fypp \
         test_median.fypp \
 	    test_distribution_uniform.fypp \
-        test_distribution_normal.fypp
+        test_distribution_normal.fypp \
+        test_distribution_exponential
 
 SRCGEN = $(SRCFYPP:.fypp=.f90)
 
