--- a/src/tests/stats/Makefile.manual
+++ b/src/tests/stats/Makefile.manual
@@ -3,7 +3,7 @@ SRCFYPP = \
         test_median.fypp \
 	    test_distribution_uniform.fypp \
         test_distribution_normal.fypp \
-        test_distribution_exponential
+        test_distribution_exponential.fypp
 
 SRCGEN = $(SRCFYPP:.fypp=.f90)
 
