Added comment to makefile
Added the comment "# -fno-range-check needed for hash functions for gfortran-9"
to Makefile.manual, and changed two spaces to one space in the following line.

[ticket: X]

--- a/Makefile.manual
+++ b/Makefile.manual
@@ -1,7 +1,7 @@
 # Fortran stdlib Makefile
 
-FC ?= gfortran
-FFLAGS ?= -Wall -Wextra -Wimplicit-interface -fPIC -g -fcheck=all  -fno-range-check
+FC ?= gfortran # -fno-range-check needed for hash functions for gfortran-9
+FFLAGS ?= -Wall -Wextra -Wimplicit-interface -fPIC -g -fcheck=all -fno-range-check
 ADD_FYPPFLAGS ?=
 
 VERSION := $(subst ., ,$(file < VERSION))
