--- a/Makefile.manual
+++ b/Makefile.manual
@@ -1,6 +1,7 @@
 # Fortran stdlib Makefile
 
-FC ?= gfortran # -fno-range-check needed for hash functions for gfortran-9
+FC ?= gfortran
+# -fno-range-check needed for hash functions for gfortran-9
 FFLAGS ?= -Wall -Wextra -Wimplicit-interface -fPIC -g -fcheck=all -fno-range-check
 ADD_FYPPFLAGS ?=
 
