--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -1,16 +1,16 @@
 SRCFYPP = \
         stdlib_32_bit_fnv_hashes.fypp \
-        stdlib_32_bit_hash_codes.fypp \
         stdlib_32_bit_nmhashes.fypp \
         stdlib_32_bit_water_hashes.fypp \
         stdlib_64_bit_fnv_hashes.fypp \
-        stdlib_64_bit_hash_codes.fypp \
         stdlib_64_bit_pengy_hashes.fypp \
         stdlib_64_bit_spookyv2_hashes.fypp \
         stdlib_ascii.fypp \
         stdlib_bitsets_64.fypp \
         stdlib_bitsets_large.fypp \
         stdlib_bitsets.fypp \
+        stdlib_hash_32bit.fypp \
+        stdlib_hash_64bit.fypp \
         stdlib_io.fypp \
         stdlib_io_npy.fypp \
         stdlib_io_npy_load.fypp \
@@ -89,21 +89,21 @@ $(SRCGEN): %.f90: %.fypp common.fypp
 # Fortran module dependencies
 f18estop.o: stdlib_error.o
 stdlib_32_bit_fnv_hashes.o: \
-   stdlib_32_bit_hash_codes.o
-stdlib_32_bit_hash_codes.o: \
+   stdlib_hash_32bit.o
+stdlib_hash_32bit.o: \
    stdlib_kinds.o
 stdlib_32_bit_nmhashes.o: \
-   stdlib_32_bit_hash_codes.o
+   stdlib_hash_32bit.o
 stdlib_32_bit_water_hashes.o: \
-   stdlib_32_bit_hash_codes.o
+   stdlib_hash_32bit.o
 stdlib_64_bit_fnv_hashes.o: \
-   stdlib_64_bit_hash_codes.o
-stdlib_64_bit_hash_codes.o: \
+   stdlib_hash_64bit.o
+stdlib_hash_64bit.o: \
    stdlib_kinds.o
 stdlib_64_bit_pengy_hashes.o: \
-   stdlib_64_bit_hash_codes.o
+   stdlib_hash_64bit.o
 stdlib_64_bit_spookyv2_hashes.o: \
-   stdlib_64_bit_hash_codes.o
+   stdlib_hash_64bit.o
 stdlib_ascii.o: stdlib_kinds.o
 stdlib_bitsets.o: stdlib_kinds.o
 stdlib_bitsets_64.o: stdlib_bitsets.o
