--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -1,10 +1,10 @@
 SRCFYPP = \
-        stdlib_32_bit_fnv_hashes.fypp \
-        stdlib_32_bit_nmhashes.fypp \
-        stdlib_32_bit_water_hashes.fypp \
-        stdlib_64_bit_fnv_hashes.fypp \
-        stdlib_64_bit_pengy_hashes.fypp \
-        stdlib_64_bit_spookyv2_hashes.fypp \
+        stdlib_hash_32bit_fnv.fypp \
+        stdlib_hash_32bit_nm.fypp \
+        stdlib_hash_32bit_water.fypp \
+        stdlib_hash_64bit_fnv.fypp \
+        stdlib_hash_64bit_pengy.fypp \
+        stdlib_hash_64bit_spookyv2.fypp \
         stdlib_ascii.fypp \
         stdlib_bitsets_64.fypp \
         stdlib_bitsets_large.fypp \
@@ -90,21 +90,21 @@ $(SRCGEN): %.f90: %.fypp common.fypp
 
 # Fortran module dependencies
 f18estop.o: stdlib_error.o
-stdlib_32_bit_fnv_hashes.o: \
+stdlib_hash_32bit_fnv.o: \
    stdlib_hash_32bit.o
 stdlib_hash_32bit.o: \
    stdlib_kinds.o
-stdlib_32_bit_nmhashes.o: \
+stdlib_hash_32bit_nm.o: \
    stdlib_hash_32bit.o
-stdlib_32_bit_water_hashes.o: \
+stdlib_hash_32bit_water.o: \
    stdlib_hash_32bit.o
-stdlib_64_bit_fnv_hashes.o: \
+stdlib_hash_64bit_fnv.o: \
    stdlib_hash_64bit.o
 stdlib_hash_64bit.o: \
    stdlib_kinds.o
-stdlib_64_bit_pengy_hashes.o: \
+stdlib_hash_64bit_pengy.o: \
    stdlib_hash_64bit.o
-stdlib_64_bit_spookyv2_hashes.o: \
+stdlib_hash_64bit_spookyv2.o: \
    stdlib_hash_64bit.o
 stdlib_ascii.o: stdlib_kinds.o
 stdlib_bitsets.o: stdlib_kinds.o \
