--- a/src/tests/linalg/Makefile.manual
+++ b/src/tests/linalg/Makefile.manual
@@ -1,5 +1,5 @@
-SRCFYPP = \
-          test_linalg.fypp
+SRCFYPP = \ 
+          test_linalg.fypp \
           test_linalg_matrix_property_checks.fypp
 SRCGEN = $(SRCFYPP:.fypp=.f90)
 PROGS_SRC = \
