--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -122,15 +122,6 @@ stdlib_io.o: \
     stdlib_kinds.o \
     stdlib_string_type.o \
     stdlib_ascii.o
-<<<<<<< HEAD
-stdlib_linalg.o: \
-	stdlib_error.o \
-	stdlib_kinds.o \
-	stdlib_optval.o
-||||||| 089f325
-stdlib_linalg.o: \
-    stdlib_kinds.o
-=======
 stdlib_io_npy.o: \
     stdlib_kinds.o
 stdlib_io_npy_load.o: \
@@ -143,11 +134,13 @@ stdlib_io_npy_save.o: \
     stdlib_strings.o
 stdlib_linalg.o: \
     stdlib_kinds.o \
-    stdlib_optval.o
->>>>>>> master
+    stdlib_optval.o \
+	stdlib_error.o
 stdlib_linalg_diag.o: \
     stdlib_linalg.o \
     stdlib_kinds.o
+stdlib_linalg_outer_product.o: \
+    stdlib_linalg.o
 stdlib_logger.o: stdlib_ascii.o stdlib_optval.o
 stdlib_optval.o: stdlib_kinds.o
 stdlib_quadrature.o: stdlib_kinds.o
@@ -234,7 +227,6 @@ stdlib_math_logspace.o: \
     stdlib_math_linspace.o
 stdlib_math_arange.o: \
     stdlib_math.o
-stdlib_linalg_outer_product.o: stdlib_linalg.o
 stdlib_math_is_close.o: \
     stdlib_math.o
 stdlib_math_all_close.o: \
