Added hashmaps test files
Added the test codes hashmaps/test_chaining_maps.f90, hashmaps/test_open_maps.f90;
and the hashmaps/CMakeLists.txt, and hashmaps/Makefile.manual to compile them.
Modified CMakeLists.txt and Maakeefile.manual so that the hashmaps subdirectory
would be added to the test directories to be compiled.

[ticket: X]

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -20,6 +20,7 @@ add_subdirectory(ascii)
 add_subdirectory(bitsets)
 add_subdirectory(hash_functions)
 add_subdirectory(hash_functions_perf)
+add_subdirectory(hashmaps)
 add_subdirectory(io)
 add_subdirectory(linalg)
 add_subdirectory(logger)
