--- a/src/tests/Makefile.manual
+++ b/src/tests/Makefile.manual
@@ -17,6 +17,7 @@ all test clean::
 	$(MAKE) -f Makefile.manual --directory=bitsets $@
 	$(MAKE) -f Makefile.manual --directory=hash_functions_perf $@
 	$(MAKE) -f Makefile.manual --directory=hash_functions $@
+	$(MAKE) -f Makefile.manual --directory=hashmaps $@
 	$(MAKE) -f Makefile.manual --directory=io $@
 	$(MAKE) -f Makefile.manual --directory=logger $@
 	$(MAKE) -f Makefile.manual --directory=optval $@
