Fixed misspelling of a file
The make -f Makefile.manual was lookin for stdlib_hashmap_wrapper.f90 instead of
stdlib_hashmap_wrappers.f90.

[ticket: X]

--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -60,7 +60,7 @@ SRC = f18estop.f90 \
       stdlib_error.f90 \
       stdlib_specialfunctions.f90 \
       stdlib_specialfunctions_legendre.f90 \
-      stdlib_hashmap_wrapper.f90 \
+      stdlib_hashmap_wrappers.f90 \
       stdlib_hashmaps.f90 \
       stdlib_io.f90 \
       stdlib_logger.f90 \
