--- a/src/tests/hash_functions/CMakeLists.txt
+++ b/src/tests/hash_functions/CMakeLists.txt
@@ -17,3 +17,10 @@ target_sources(
 if(CMAKE_Fortran_COMPILER_ID MATCHES "^Intel")
   set_target_properties(test_hash_functions PROPERTIES LINKER_LANGUAGE Fortran)
 endif()
+if(CMAKE_Fortran_COMPILER_ID STREQUAL GNU AND CMAKE_Fortran_COMPILER_VERSION VERSION_LESS 10.0)
+  target_compile_options(
+    test_hash_functions
+    PRIVATE
+    $<$<COMPILE_LANGUAGE:Fortran>:-fno-range-check>
+   )
+endif()
