--- a/Makefile.manual
+++ b/Makefile.manual
@@ -1,5 +1,7 @@
 # Fortran stdlib Makefile
 
+MAKEFLAGS += --no-builtin-rules --no-builtin-variables
+
 FC ?= gfortran
 # -fno-range-check needed for hash functions for gfortran-9
 FFLAGS ?= -Wall -Wextra -Wimplicit-interface -fPIC -g -fcheck=all -fno-range-check
