Gamma special function  (#625)
* inital draft

* Add draft specialfunction_gamma

* CMakeList file correction

* update gamma function

* add test file

* change kind qp

* change to tab line 26

* Update doc/specs/stdlib_specialfunctions_gamma.md

Co-authored-by: Jeremie Vandenplas <jeremie.vandenplas@gmail.com>

* Update doc/specs/stdlib_specialfunctions_gamma.md

Co-authored-by: Jeremie Vandenplas <jeremie.vandenplas@gmail.com>

* Update doc/specs/stdlib_specialfunctions_gamma.md

Co-authored-by: Jeremie Vandenplas <jeremie.vandenplas@gmail.com>

* Update doc/specs/stdlib_specialfunctions_gamma.md

Co-authored-by: Jeremie Vandenplas <jeremie.vandenplas@gmail.com>

* Update doc/specs/stdlib_specialfunctions_gamma.md

Co-authored-by: Jeremie Vandenplas <jeremie.vandenplas@gmail.com>

* Update src/tests/specialfunctions/test_specialfunctions_gamma.fypp

Co-authored-by: Jeremie Vandenplas <jeremie.vandenplas@gmail.com>

* Update doc/specs/stdlib_specialfunctions_gamma.md

Co-authored-by: Jeremie Vandenplas <jeremie.vandenplas@gmail.com>

* wording change

Co-authored-by: jim-215-fisher <jfeng33@gmail.com>
Co-authored-by: Jeremie Vandenplas <jeremie.vandenplas@gmail.com>
Co-authored-by: milancurcic <caomaco@gmail.com>

--- a/src/tests/stats/CMakeLists.txt
+++ b/src/tests/stats/CMakeLists.txt
@@ -1,4 +1,4 @@
-### Pre-process: .fpp -> .f90 via Fypp
+#### Pre-process: .fpp -> .f90 via Fypp
 
 # Create a list of the files to be preprocessed
 set(fppFiles
