--- a/test/example/error/CMakeLists.txt
+++ b/test/example/error/CMakeLists.txt
@@ -1,6 +1,11 @@
 ADD_DEMO(check1)
+set_tests_properties(check1 PROPERTIES WILL_FAIL true)
 ADD_DEMO(check2)
+set_tests_properties(check2 PROPERTIES WILL_FAIL true)
 ADD_DEMO(check3)
 ADD_DEMO(check4)
+set_tests_properties(check4 PROPERTIES SKIP_RETURN_CODE 77)
 ADD_DEMO(error_stop1)
+set_tests_properties(error_stop1 PROPERTIES WILL_FAIL true)
 ADD_DEMO(error_stop2)
+set_tests_properties(error_stop2 PROPERTIES WILL_FAIL true)
