--- a/test/example/strings/CMakeLists.txt
+++ b/test/example/strings/CMakeLists.txt
@@ -2,9 +2,9 @@ ADD_DEMO(chomp)
 ADD_DEMO(count)
 ADD_DEMO(ends_with)
 ADD_DEMO(find)
-#ADD_DEMO(padl)
-#ADD_DEMO(padr)
-#ADD_DEMO(replace_all)
+ADD_DEMO(padl)
+ADD_DEMO(padr)
+ADD_DEMO(replace_all)
 ADD_DEMO(slice)
 ADD_DEMO(starts_with)
 ADD_DEMO(strip)
