--- a/example/hashmaps/CMakeLists.txt
+++ b/example/hashmaps/CMakeLists.txt
@@ -9,6 +9,7 @@ ADD_EXAMPLE(hashmaps_free_key)
 ADD_EXAMPLE(hashmaps_free_other)
 ADD_EXAMPLE(hashmaps_get)
 ADD_EXAMPLE(hashmaps_get_other_data)
+ADD_EXAMPLE(hashmaps_get_other_scalar)
 ADD_EXAMPLE(hashmaps_hasher_fun)
 ADD_EXAMPLE(hashmaps_init)
 ADD_EXAMPLE(hashmaps_key_test)
