--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -14,6 +14,7 @@ add_subdirectory(hashmaps)
 add_subdirectory(hash_procedures)
 add_subdirectory(io)
 add_subdirectory(linalg)
+add_subdirectory(linked_list)
 add_subdirectory(logger)
 add_subdirectory(math)
 add_subdirectory(optval)
