Rename the examples to avoid conflicts
Rename the examples so that the names of the targets do not conflict with existing examples for other modules (notably in the strings subdirectory

--- a/example/linked_list/CMakeLists.txt
+++ b/example/linked_list/CMakeLists.txt
@@ -1,14 +1,14 @@
 include_directories(${CMAKE_CURRENT_LIST_DIR})
-ADD_EXAMPLE(absorb)
-ADD_EXAMPLE(clear)
-ADD_EXAMPLE(concat)
-ADD_EXAMPLE(get)
-ADD_EXAMPLE(insert)
-ADD_EXAMPLE(pop)
-ADD_EXAMPLE(push)
-ADD_EXAMPLE(remove)
-ADD_EXAMPLE(replace)
-ADD_EXAMPLE(reverse)
-ADD_EXAMPLE(size)
-ADD_EXAMPLE(slice)
-ADD_EXAMPLE(splice)
+ADD_EXAMPLE(linked_absorb)
+ADD_EXAMPLE(linked_clear)
+ADD_EXAMPLE(linked_concat)
+ADD_EXAMPLE(linked_get)
+ADD_EXAMPLE(linked_insert)
+ADD_EXAMPLE(linked_pop)
+ADD_EXAMPLE(linked_push)
+ADD_EXAMPLE(linked_remove)
+ADD_EXAMPLE(linked_replace)
+ADD_EXAMPLE(linked_reverse)
+ADD_EXAMPLE(linked_size)
+ADD_EXAMPLE(linked_slice)
+ADD_EXAMPLE(linked_splice)
