Adjust the CMake and CI build set-ups
Correct the CMakeLists.txt file in the src directory to include the linked list modules , also adjust the fpm-deployment.sh to copy any auxiliary source files from the example directory.

--- a/example/linked_list/CMakeLists.txt
+++ b/example/linked_list/CMakeLists.txt
@@ -1,24 +1,15 @@
 #include_directories(${CMAKE_CURRENT_LIST_DIR})
 
-macro(ADD_EXAMPLE_INCLUDE name)
-    add_executable(example_${name} example_${name}.f90)
-    target_include_drectories(example_${name} ${CMAKE_CURRENT_SOURCE_DIR})
-    target_link_libraries(example_${name} "${PROJECT_NAME}")
-    add_test(NAME ${name}
-             COMMAND $<TARGET_FILE:example_${name}> ${CMAKE_CURRENT_BINARY_DIR}
-             WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
-endmacro(ADD_EXAMPLE_INCLUDE)
-
-ADD_EXAMPLE_INCLUDE(linked_absorb)
-ADD_EXAMPLE_INCLUDE(linked_clear)
-ADD_EXAMPLE_INCLUDE(linked_concat)
-ADD_EXAMPLE_INCLUDE(linked_get)
-ADD_EXAMPLE_INCLUDE(linked_insert)
-ADD_EXAMPLE_INCLUDE(linked_pop)
-ADD_EXAMPLE_INCLUDE(linked_push)
-ADD_EXAMPLE_INCLUDE(linked_remove)
-ADD_EXAMPLE_INCLUDE(linked_replace)
-ADD_EXAMPLE_INCLUDE(linked_reverse)
-ADD_EXAMPLE_INCLUDE(linked_size)
-ADD_EXAMPLE_INCLUDE(linked_slice)
-ADD_EXAMPLE_INCLUDE(linked_splice)
+ADD_EXAMPLE(linked_absorb)
+ADD_EXAMPLE(linked_clear)
+ADD_EXAMPLE(linked_concat)
+ADD_EXAMPLE(linked_get)
+ADD_EXAMPLE(linked_insert)
+ADD_EXAMPLE(linked_pop)
+ADD_EXAMPLE(linked_push)
+ADD_EXAMPLE(linked_remove)
+ADD_EXAMPLE(linked_replace)
+ADD_EXAMPLE(linked_reverse)
+ADD_EXAMPLE(linked_size)
+ADD_EXAMPLE(linked_slice)
+ADD_EXAMPLE(linked_splice)
