Correct the test program
Correct the performance test program - apparently it was using some deprecated names and it was not built using the CMake build system.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -23,6 +23,7 @@ add_subdirectory(hash_functions_perf)
 add_subdirectory(hashmaps)
 add_subdirectory(io)
 add_subdirectory(linalg)
+add_subdirectory(linked_list)
 add_subdirectory(logger)
 add_subdirectory(optval)
 add_subdirectory(selection)
