--- a/config/CMakeLists.txt
+++ b/config/CMakeLists.txt
@@ -16,6 +16,13 @@ set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" PARENT_SCOPE)
 # Check for available features
 # Note: users can overwrite the automatic check by setting the value at configure time
 include(CheckFortranSourceRuns)
+if (NOT DEFINED WITH_CBOOL)
+  check_fortran_source_runs(
+    "use, intrinsic :: iso_c_binding, only: c_bool; integer, parameter :: lk = kind(.true.); if (c_bool == lk) stop 1; end"
+    WITH_CBOOL
+  )
+  set(WITH_CBOOL ${WITH_CBOOL} PARENT_SCOPE)
+endif()
 if (NOT DEFINED WITH_QP)
   check_fortran_source_runs(
     "if (selected_real_kind(33) == -1) stop 1; end"
