test_string_assigment: optional compilation of string_type(.false._c_bool)

--- a/test/string/CMakeLists.txt
+++ b/test/string/CMakeLists.txt
@@ -1,3 +1,12 @@
+#### Pre-process: .fpp -> .f90 via Fypp
+
+# Create a list of the files to be preprocessed
+set(fppFiles
+    test_string_assignment.fypp
+)
+
+fypp_f90("${fyppFlags}" "${fppFiles}" outFiles)
+
 ADDTEST(string_assignment)
 ADDTEST(string_operator)
 ADDTEST(string_intrinsic)
