--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -47,12 +47,12 @@ jobs:
         update: false
         install: >-
           git
-          gcc
-          gcc-fortran
-          python
-          python-pip
-          cmake
-          ninja
+          mingw-w64-${{ matrix.arch }}-gcc
+          mingw-w64-${{ matrix.arch }}-gcc-fortran
+          mingw-w64-${{ matrix.arch }}-python
+          mingw-w64-${{ matrix.arch }}-python-pip
+          mingw-w64-${{ matrix.arch }}-cmake
+          mingw-w64-${{ matrix.arch }}-ninja
 
     - name: Install fypp
       run: pip install fypp
